--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,8 @@
-p {
-  color: #777;
+$space-large: 2.5rem;
+$title-color: #555;
+
+.page-title {
+    color: $title-color;
+    margin-top: $space-large;
+    margin-bottom: $space-large;
 }
